styles/index.css
:root {
    box-sizing: border-box;
    scroll-behavior: smooth;
}

html{
    box-sizing: border-box;
    background-color: black;
    font-family: 'Open Sans', sans-serif;
}

*,*::before,*::after{
    box-sizing: inherit;
}

body {
    background-color: gray;
    display:flex;
    flex-direction: column;
    margin:0;
    /* height:370vh; */
    /* background-image: url('http://www.handandbeak.com/wp-content/uploads/ju/jungle-forest-background-vector.jpg'); */
    /* background-size: auto; */

}

/* .page-top {
    width:100%;
    height:10vh;
} */

nav{
    position: fixed;
    top:0;
    left:0;
    display:flex;
    background-color:gray;
    justify-content:space-between;
    align-items: center;
    width:100%;
    /* height:10%; */
    padding:10px 20px;
    z-index: 5;
    flex-direction: column;
}

.nav-title {
    font-size: 30px;
}

ul{
    display:flex;
    /* flex-direction: column; */
    list-style:none;
    justify-content: space-evenly;
    align-items: center;
    /* border: 1px solid red; */
    padding: 0;
    margin:0;
    height:100%;
}
nav a{
    color:white;
    text-decoration: none;
    /* padding: 25px; */
}

.nav-links a {
    padding: 25px;
}


.main-box {
    width:40%;
    height: 100%;
    /* border: black 1px solid; */
    /* background-color: black; */
}

.main-section {
    display:flex;
    height:70vh;
    width: 100vw;
    justify-content: space-between;
}

.title-content .text-component {
    text-align: center;
}

/* #box-1 {
    background-color: aqua
} */
#box-2 {
    background-color: greenyellow;
    height:50%;
}
.mid-box {
    position: absolute;
    top:20vh;
    left:20vw;
    width: 60vw;
    height:50vh;
    background-color: lightgray;
    z-index: 0;
}

.page-container {
    /* min-height: 100vh; */
    height:100%;
}

.page1 {
    min-height: 100vh;
}

.page2 {
    background-color:salmon;
}
.page3 {
    /* height:130vh; */
    /* height: 100%; */
    background-color:lavender;
    display: flex;
    flex-direction: column;
}
.page4 {
    background-color:lightgray;
    display:flex;
    /* height:100%; */
}

.pagejumper {
    position: relative;
    height:10vh;
    bottom:10vh;
    /* background-color: black; */
}

/* .test {
    height:100%
} */

/* @media only screen and (max-width: 1136px) {
    body {
      background-image: none;
    }
  } */


  /* -------------------------------- 
 File#: _1_hero
 Title: Hero
 Descr: A full-width callout section
 -------------------------------- */
.title-container {
    display: flex;
    flex-direction: column-reverse;
    align-items: center;
    justify-content: space-evenly;
    /* background-color: green; */
    min-height: 100vh;
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center center;
    padding: 30px 30px 30px 30px;
    height:100%;
}

.profile-avatar {
    border-radius: 50%;
    border: 20px aliceblue solid;
    width:300px;
    height:300px;
}

.title-label {
color: gray;
font-size: 20px;
}

/* .text-component {
    padding:0 80px;
} */

#feature-name {
    font-size: 60px;
    margin: 20px;
}
#feature-text {
    font-size: 30px;
}
#regular-text {
    font-size: 16px;
}
#feature-name {
    font-size: 60px;
}

.text-component h1 {
    font-size: 30px;
}
.text-component p {
    font-size: 15px;
}


.featured-project-image {
    /* max-width: 600px; */
    width: 60%;
}

.page2 .text-component {
    text-align: center;
}
.page3 .text-component {
    text-align: center;
}
.page4 .text-component {
    text-align: center;
}

.projects-container {
    display:flex;
    justify-content: space-evenly;
    align-items: center;
    flex-direction: column;
}

.project-container {
    display:flex;
    flex-direction: column;
    align-items: center;
    /* justify-content: center; */
    width: 300px;
    height: 550px;
    /* overflow:hidden; */
}

.project-image {
    /* max-width:230px; */
    width:230px;
    height:230px;
    opacity:1;
    /* display:block; */
    transition: 0.5s ease;
    /* backface-visibility: hidden; */
}

.page2 .project-skills-container {
    /* width: 230px; */
    width: 100%;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-evenly;
    margin: 5px;
}
.project-skills-container {
    width: 230px;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-evenly;
    margin: 5px;
}

.project-skill-card {
    width: 60px;
    height: 60px;
    margin: 2px;
    display: flex;
    justify-content: center;
    align-items: center;
}

.project-skill-icon {
    font-size: 40px;
    padding: 10px;
    color: rgb(0,91, 255); 
}

.project-middle {
    /* display:flex; */
    position: relative;
    width:230px;
    height:230px;
}

.project-hover {
    transition: .5s ease;
    opacity: 0;
    position: absolute;
    top: 0;
    left: 0;
    height:230px;
    width:230px;
    display:flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-evenly;
    /* transform: translate(-50%, -50%);
    -ms-transform: translate(-50%, -50%);
    text-align: center;  */
}

.project-desc {
    height:150px;
    padding:20px;
    text-align: center;
}

.project-links {
    display:flex;
    justify-content: space-evenly;
    align-items: center;
    width: 230px;
    height: 50px;
}

.project-button {
    width:100px;
    height:50px;
}

.project-container:hover .project-image {
    opacity: 0.2;
}

.project-container:hover .project-hover {
    opacity: 1;
}



.page4-container {
    width: 100%;
    height: 100%;
    display: flex;
    flex-direction: column;
}

.half-page {
    /* height: 100%; */
    width: 100%;
    /* min-height: 85vh; */
}

.skills-container {
    background-color: antiquewhite;
    display: flex;
    flex-direction: column;
    padding: 30px;
    text-align: center;
    /* line-height: 20px */
    /* flex-direction: column; */
    /* overflow: wrap; */
}

.contact-container {
    background-color: beige;
    display: flex;
    flex-direction: column;
    /* display:inline-block; */
    padding: 30px;
    text-align: center;
    align-items: center;
}

.skill-card-container {
    display: flex;
    flex-wrap: wrap;
    flex-direction: row;
    justify-content: center;
}

.contact-card-container {
    display: flex;
    flex-wrap: wrap;
    flex-direction: row;
    justify-content: center;
}
.skill-card {
    width: 90px;
    height: 90px;
    margin: 10px;
    display: flex;
    justify-content: center;
    align-items: center;
}
.contact-card {
    width: 150px;
    height: 150px;
    margin: 5px;
}
.contact-card p {
    /* padding:0; */
    line-height: 0;
    text-align: center;
}
.fab, .fas {
    /* height:96px; */
    padding:20px;
}

.icons-js {
    color:green;
}

.contact-icon {
    padding-top: 20px;
}

.contact-container a{
    color:black;
    text-decoration: none;
}


/*
.project-text {
    background-color: #4CAF50;
    color: white;
    font-size: 16px;
    padding: 16px 32px;
} */

.skill-icon {
    font-size: 60px;
    /* padding: 20px; */
    color: rgb(0,91, 255); 
}

.skill-icon:hover {
    filter: invert(100%);
}
.project-skill-icon2 {
    font-size: 10px;
    /* padding: 20px; */
    color: rgb(0,91, 255); 
}
.skill-icon2 {
    font-size: 20px;
    /* padding: 20px; */
    color: rgb(0,91, 255); 
}

.skill-icon2:hover {
    filter: invert(100%);
}
.contact-icon:hover {
    /* filter: invert(100%); */
    background-color: black;
    color: beige;
}

.skill-icon-small {
    font-size: 90px;
}
.skill-icon2-small {
    font-size: 30px;
}

/* @media only screen and (min-width: 321px) {
    .page3 {
        height: 120vh;
    }
    .page4 {
        height: 90vh;
    }
} */

@media only screen and (min-width: 650px) {
    .title-container {
        flex-direction: row;
        /* padding: 10px; */
    }
    .profile-avatar {
        border-radius: 50%;
        border: 30px aliceblue solid;
        width: 350px;
        height: 350px;
    }
    .title-container .container {
        width:50%;
    }   
    .page3 {
        /* height:90vh; */
    }
    .page4 {
        /* height:120vh; */
    }
    .projects-container {
        flex-direction: row;
    }
    .text-component h1 {
        font-size: 60px;
    }
    .text-component p {
        font-size: 30px;
    }
    .page4-container {
        flex-direction: row;
    }
    .half-page {
        /* height: 100%; */
        width: 50%;
    }
    nav {
        flex-direction: row;
    }
    li {
        padding: 25px;
    }
    .nav-title {
        font-size: 16px;
    }
}

@media only screen and (min-width: 795px) {
    /* .page4 {
        height:90vh;
    } */
}

/* @media only screen and (min-width: 1024px) { 
    .project-container {
        width: 500px;
        height:500px;
    }
    .project-middle {
        width: 400px;
        height: 400px;
    }
    .project-image {
        width: 400px;
        height:400px;
    }
    .project-header {
        font-size: 40px;
    }
} */

/* @media only screen and (min-height: 813px) {
    .page3 {
        height:90vh;
    }
} */

